--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "type": "node",
             "name": "Attach by Process ID",
@@ -21,7 +22,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\BE\\netro_genix\\functions\\db_to_service_ws_test.js"
+            "program": "${workspaceFolder}\\BE\\netro_genix\\functions\\db_to_service_ws.js"
         }
     ]
 }
