rcv_datetime 2024만 잘리는 부분 해결

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\BE\\netro_genix\\functions\\db_to_service_ws.js"
+            "program": "${workspaceFolder}\\BE\\netro_genix\\function\\db_to_service_ws.js"
         }
     ]
 }
