--- a/BE/netro_genix/package.json
+++ b/BE/netro_genix/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node  genix.js --delay 2"
+    "start": "set NODE_OPTIONS=--max-old-space-size=8192 && nodemon --exec babel-node genix.js --delay 2"
   },
   "keywords": [],
   "author": "",
