--- a/BE/netro_genix/.env
+++ b/BE/netro_genix/.env
@@ -2,3 +2,9 @@ ACCESS_TOKEN_SECRET=defaultkey
 # MYSQL=jllgshllWEUJHGHYJkjsfjds90
 # JWT_KEY=secret
 RSAES_PRIVATE_KEY = nEtr024gENIxPr1v@teKE9
+
+DB_HOST=121.189.20.71
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=DH2vY8M17fQqpFdm
+DB_DATABASE=netro_data_platform
