--- a/BE/netro_genix/package.json
+++ b/BE/netro_genix/package.json
@@ -41,6 +41,8 @@
     "@babel/cli": "^7.24.7",
     "@babel/core": "^7.26.0",
     "@babel/node": "^7.26.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0",
     "nodemon": "^3.1.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
