dummy_client_vessel .env 경로 수정

--- a/BE/netro_genix/.env
+++ b/BE/netro_genix/.env
@@ -3,8 +3,8 @@ ACCESS_TOKEN_SECRET=defaultkey
 # JWT_KEY=secret
 RSAES_PRIVATE_KEY = nEtr024gENIxPr1v@teKE9
 
-DB_HOST=121.189.20.71
-DB_PORT=3306
+DB_HOST=14.63.176.165
+DB_PORT=7306
 DB_USER=root
-DB_PASSWORD=DH2vY8M17fQqpFdm
+DB_PASSWORD=netro9888!
 DB_DATABASE=netro_data_platform
